---
source: src/tests.rs
expression: ast
input_file: src/examples/valid/non-plot/functions.ra
---
Main(([], [
    Function(test, Void, [], [
        Assignment(false, Id(a), Integer(1)),
    ]),
    Function(test2, Int, [Argument(Int, a)], [
        Return(Id(a)),
    ]),
], [
    FunctionCall(test, []),
    Assignment(false, Id(a), FunctionCall(test2, [Integer(2)])),
    Write([Id(a)]),
]))
